--- a/Front/src/tpl/botBlacklist-edit-dialog.html
+++ b/Front/src/tpl/botBlacklist-edit-dialog.html
@@ -20,9 +20,13 @@
             <div class="bot-blacklist-add-content">
               <div class="form-group">
                   <label>IP or IP range</label>
-                  <div class="ip-range clearfix" ng-repeat="ip in ips track by $index">
-                    <input type="text" class="form-control" placeholder="IP/IP range(x.x.x.x-x.x.x.x)" ng-model="ip.value" required>
+                  <div class="ip-range clearfix" ng-repeat="ip in item.ipRules track by $index">
+                    <input type="text" name="ipRule{{$index}}" class="form-control" placeholder="IP/IP range(x.x.x.x-x.x.x.x)" ng-model="item.ipRules[$index]" required>
                     <i class="material-icons" ng-click="deleteIP($index)" ng-show="$index != 0">delete</i>
+                      <span style="color:red" ng-show="editForm.ipRule{{$index}}.$dirty && editForm.ipRule{{$index}}.$invalid">
+                        <span ng-show="editForm.ipRule{{$index}}.$error.valid">IP address is valid.</span>
+                        <span ng-show="editForm.ipRule{{$index}}.$error.required">IP address is not be empty.</span>
+                        </span>
                   </div>
               </div>
               <div class="clearfix">
@@ -34,7 +38,7 @@
               <div class="form-group">
                   <label>Useragent</label>
                   <div class="ip-range clearfix" ng-repeat="agent in item.userAgentRules track by $index">
-                    <input type="text" class="form-control" placeholder="Useragent" ng-model="agent.userAgent" required>
+                    <input type="text" class="form-control" placeholder="Useragent" ng-model="item.userAgentRules[$index]" required>
                     <i class="material-icons" ng-click="deleteAgent($index)" ng-show="$index != 0">delete</i>
                   </div>
               </div>
