lander、offer编辑中 dialog非必填

--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
+                <label class="col-sm-3 control-label">Country: </label>
                 <div class="col-sm-5">
                     <select class="cs-subform-select" name="country"
                         ng-model="item.country"
