--- a/Front/src/tpl/eventLog.html
+++ b/Front/src/tpl/eventLog.html
@@ -6,12 +6,12 @@
 <div class="form-column bot-blacklist">
   <div class="bot-blacklist-content event-log clearfix">
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.user" required>
+      <md-select class="cs-subform-select" ng-model="filter.user">
         <md-option value="0">All users</md-option>
       </md-select>
     </div>
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.action" required>
+      <md-select class="cs-subform-select" ng-model="filter.action">
         <md-option value="0" selected>All actions</md-option>
         <md-option value="1">Create</md-option>
         <md-option value="2">Change</md-option>
@@ -20,7 +20,7 @@
       </md-select>
     </div>
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.entityType" required>
+      <md-select class="cs-subform-select" ng-model="filter.entityType">
         <md-option value="0" selected>All entity types</md-option>
         <md-option value="1">Campaign</md-option>
         <md-option value="2">Lander</md-option>
@@ -30,7 +30,7 @@
       </md-select>
     </div>
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.datetype" required>
+      <md-select class="cs-subform-select" ng-model="filter.datetype">
         <md-option value="1">Today</md-option>
         <md-option value="2">Yesterday</md-option>
         <md-option value="3">Last 7 days</md-option>
