--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -48,12 +48,9 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country: </label>
                 <div class="col-sm-5">
-                    <select class="cs-subform-select" name="country" ng-model="item.country" required ng-change="countryChanged(item.country)">
+                    <select class="cs-subform-select" name="country" ng-model="item.country" ng-change="countryChanged(item.country)">
                         <option value="{{cou.value}}" ng-repeat="cou in countries">{{cou.display}}</option>
                     </select>
-                    <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
-                    <span ng-show="editForm.country.$error.required">Country is required.</span>
-                    </span>
                 </div>
             </div>
             <div class="form-group">
