--- a/Front/src/tpl/botBlacklist.html
+++ b/Front/src/tpl/botBlacklist.html
@@ -9,7 +9,7 @@ The maximum amount of the bot rules that can be created is {{blacklistCount}}. Y
   <div class="bot-blacklist-content clearfix">
     <div class="form-group bot-select">
       <label>Bot rules: </label>
-        <md-select class="cs-subform-select" ng-model="data.enabled" required>
+        <md-select class="cs-subform-select" ng-model="data.enabled">
             <md-option value="true">Enabled</md-option>
             <md-option value="false">Disabled</md-option>
         </md-select>
