--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -9,33 +9,33 @@
         <div class="col-xs-12 col-sm-12 col-md-7">
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <h3>Visits</h3>
-                <div class="data-num">36,393</div>
+                <div class="data-num">{{summary.visits | number}}</div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <h3>Clicks</h3>
-                <div class="data-num">22,845</div>
+                <div class="data-num">{{summary.clicks | number}}</div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <h3>Conversions</h3>
-                <div class="data-num">845</div>
+                <div class="data-num">{{summary.conversions | number}}</div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <h3>Revenue</h3>
-                <div class="data-num">8450</div>
+                <div class="data-num">{{summary.revenue | number:0}}</div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-5">
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
                 <h3>Cost</h3>
-                <div class="data-num">6000</div>
+                <div class="data-num">{{summary.cost | number:0}}</div>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
                 <h3>Profit</h3>
-                <div class="data-num">2,445</div>
+                <div class="data-num">{{summary.profit | number:0}}</div>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
                 <h3>ROI</h3>
-                <div class="data-num">2,845</div>
+                <div class="data-num">{{summary.roi | number:0}}</div>
             </div>
         </div>
     </div>
@@ -44,33 +44,33 @@
             <div class="table-toggles clearfix">
                 <div class="toggles-button-left">
                     <ul>
-                        <li class="selected">Top</li>
-                        <li>Bottom</li>
+                        <li ng-click="order='desc'" ng-class="{selected:order=='desc'}">Top</li>
+                        <li ng-click="order='asc'"  ng-class="{selected:order=='asc'}">Bottom</li>
                     </ul>
                 </div>
                 <div class="toggles-button-right">
                     <ul>
-                        <li class="selected">Revenue</li>
-                        <li class="selected">Cost</li>
-                        <li>Profit</li>
+                        <li ng-click="sortby='revenue'" ng-class="{selected:sortby=='revenue'}">Revenue</li>
+                        <li ng-click="sortby='cost'" ng-class="{selected:sortby=='cost'}">Cost</li>
+                        <li ng-click="sortby='profit'" ng-class="{selected:sortby=='profit'}">Profit</li>
                     </ul>
                 </div>
             </div>
-            <table class="table table-hover" ng-repeat="tb in tableData">
-                <thead>
-                    <tr>
-                        <th>{{tb.num}}</th>
-                        <th>{{tb.campaigns}}</th>
-                        <th>{{tb.profit}}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="list in tb.tbCon">
-                        <td>{{list.id}}</td>
-                        <td>{{list.content}}</td>
-                        <td>{{list.dollar}}</td>
-                    </tr>
-                </tbody>
+            <table class="table table-hover" ng-repeat="tbl in tables">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>{{tbl | ucfirst}}</th>
+                  <th>{{sortby | ucfirst}}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="row in tableData[tbl]">
+                  <td>{{$index+1}}</td>
+                  <td>{{row[tbl+'Name']}}</td>
+                  <td>{{row[sortby]}}</td>
+                </tr>
+              </tbody>
             </table>
         </div>
         <div class="chart-widget" flex>
