bugList NB-11 and campaign edit dialog flow preview update 0219

--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -37,7 +37,7 @@
                   <li class="hg"><em>&times;</em></li>
                   <li class="hg"><em>&times;</em></li>
                 </ol>
-                <button class="btn p-btn btn-three p-btn-01" type="button" ng-click="editChangePlan()"><p>SELECT PLAN----222<i class="icon-angle-right"></i></p></button>
+                <button class="btn p-btn btn-three p-btn-01" type="button" ng-click="editChangePlan()"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
               </div>
             </li>
             </div>
