update selected lander/offer after edit on flow edit page

--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -342,7 +342,7 @@
                     No matching found.
                   </md-not-found>
                 </md-autocomplete>
-                <i class="material-icons md-mini edit-btn" ng-show="lander._def" ng-click="editLander($event, lander._def)">edit</i>
+                <i class="material-icons md-mini edit-btn" ng-show="lander._def" ng-click="editLander($event, lander)">edit</i>
               </div>
             </div>
             <div class="col-sm-3 col-md-3 input-content">
@@ -360,11 +360,11 @@
           <div class="cs-flow-lander-action clearfix">
             <button ng-click="addLander($event)" type="button" class="btn btn-default add-lander-btn">
               <i class="material-icons add-box">add_box</i>
-              Add New Lander
+              Add Lander
             </button>
             <button ng-click="editLander($event)" class="btn btn-default add-lander-btn">
               <i class="material-icons add-box">add_box</i>
-              Add Lander
+              Add New Lander
             </button>
           </div>
         </div>
@@ -397,7 +397,7 @@
                     No matching found.
                   </md-not-found>
                 </md-autocomplete>
-                <i class="material-icons md-mini edit-btn" ng-show="offer._def" ng-click="editOffer($event, offer._def)">edit</i>
+                <i class="material-icons md-mini edit-btn" ng-show="offer._def" ng-click="editOffer($event, offer)">edit</i>
               </div>
             </div>
             <div class="col-sm-3 col-md-3 input-content">
@@ -415,11 +415,11 @@
           <div class="cs-flow-lander-action clearfix">
             <button ng-click="addOffer($event)" type="button" class="btn btn-default add-lander-btn">
               <i class="material-icons add-box">add_box</i>
-              Add New Offer
+              Add Offer
             </button>
             <button ng-click="editOffer($event)" class="btn btn-default add-lander-btn">
               <i class="material-icons add-box">add_box</i>
-              Add Offer
+              Add New Offer
             </button>
           </div>
         </div>
