--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -78,7 +78,8 @@
     <form name="editFlowForm" method="post" ng-submit="$event.preventDefault()" class="form-content" ng-show="onEdit=='flow'">
       <div class="form-group">
         <label class="label-name">Name:</label>
-        <input type="text" class="form-control" ng-model="flow.name" required ng-change="nameChanged(flow.name)">
+        <input type="text" class="form-control" ng-class="{error:flow._nameError}" ng-model="flow.name" required ng-change="nameChanged(flow)">
+        <span class-"error-message" ng-show="flow._nameError">Name is invalid</span>
       </div>
 
       <div class="form-group">
@@ -121,16 +122,14 @@
       <div class="row">
         <div class="form-group col-sm-8 col-md-8 name-div">
           <label class="label-name">Name:</label>
-          <input type="text" class="form-control" ng-model="curRule.name" required>
+          <input type="text" class="form-control" ng-class="{error:curRule._nameError}" ng-model="curRule.name" required ng-change="validateName(curRule)">
+          <span class-"error-message" ng-show="curRule._nameError">Name is invalid</span>
         </div>
         <div class="form-group col-sm-4 col-sm-4">
           <label class="label-name">Status:</label>
           <md-switch class="md-primary" ng-model="curRule.enabled" aria-label="Enabled"></md-switch>
         </div>
       </div>
-      
-
-      
 
       <div class="cs-conditions">
         <div class="cs-conditions-button">
@@ -283,7 +282,8 @@
       <div class="row path-top">
         <div class="col-sm-7 col-md-7 name-div" layout="column">
           <label class="label-name">Name:</label>
-          <input type="text" class="form-control" ng-model="curPath.name" required>
+          <input type="text" class="form-control" ng-class="{error:curPath._nameError}" ng-model="curPath.name" required ng-change="validateName(curPath)">
+          <span class-"error-message" ng-show="curPath._nameError">Name is invalid</span>
         </div>
         <div class="col-sm-3 col-md-3" layout="column">
           <label class="label-name">Weight:</label>
