--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -430,13 +430,17 @@
     <div class="cs-flow-bottom-actions clearfix">
       <span class="cs-on-save" ng-show="onSave">Saving...</span>
       <span class="cs-save-time" ng-show="saveTime">Saved at {{saveTime | date:'yyyy-MM-dd HH:mm:ss'}}</span>
-      <button class="btn btn-primary save-btn" ng-click="save()">
+      <button class="btn btn-primary save-btn" ng-hide="showContinue" ng-click="save()">
         <i class="material-icons">check</i>
         Save
       </button>
-      <button class="btn btn-primary save-btn" ng-click="saveClose()">
+      <button class="btn btn-primary save-btn" ng-hide="showContinue" ng-click="saveClose()">
         <i class="material-icons">check</i>
         Save&amp;close
+      </button>
+      <button class="btn btn-primary save-btn" ng-show="showContinue" ng-click="continueEdit()">
+        <i class="material-icons">check</i>
+        Continue
       </button>
       <button class="btn close-btn" ng-click="close()">
         <i class="material-icons">close</i>
