--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -5,6 +5,49 @@
 </div> -->
 
 <div flex layout="column" class="cs-page-content dash-board">
+
+    <div class="cs-action-bar clearfix">
+        <div class="right-select">
+            <div class="cs-subform-control">
+                <md-select class="cs-subform-select" ng-model="datetype">
+                    <md-option value="1">Today</md-option>
+                    <md-option value="2">Yesterday</md-option>
+                    <md-option value="3">Last 7 days</md-option>
+                    <md-option value="4">Last 14 days</md-option>
+                    <md-option value="5">This Week</md-option>
+                    <md-option value="6">Last Week</md-option>
+                    <md-option value="7">This Month</md-option>
+                    <md-option value="8">Last Month</md-option>
+                    <md-option value="0">Custom</md-option>
+                </md-select>
+            </div>
+            <div class="cs-subform-group" ng-show="datetype==0">
+                <label class="cs-subform-label">{{'fromDate' | translate}}：</label>
+                <div class="cs-subform-control">
+                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="filter.fromDate"
+                            ng-max="filter.toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
+                            ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
+                        {{filter.fromDate | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+                    </button>
+                    <select class="cs-subform-select" ng-model="filter.fromTime">
+                        <option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</option>
+                    </select>
+                </div>
+                <label class="cs-subform-label">{{'toDate' | translate}}：</label>
+                <div class="cs-subform-control">
+                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="filter.toDate"
+                            ng-min="filter.fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+                            ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
+                        {{filter.toDate | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+                    </button>
+                    <select class="cs-subform-select" ng-model="filter.toTime">
+                        <option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row data-list">
         <div class="col-xs-12 col-sm-12 col-md-7">
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
@@ -73,8 +116,14 @@
               </tbody>
             </table>
         </div>
-        <div class="chart-widget" flex>
-            <div id="container">Placeholder for chart</div>
+
+        <div class="col-sm-12 col-md-6 chart-widget">
+            <div style="height: 350px; padding: 10px">
+                <canvas class="chart chart-line" chart-data="chart.data" chart-labels="chart.labels"
+                        chart-series="chart.series" chart-options="chart.options"
+                        chart-dataset-override="chart.datasetOverride"></canvas>
+            </div>
         </div>
+
     </div>
 </div>
