--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -31,7 +31,7 @@
         </div>
         <div class="right-select">
             <div class="cs-subform-control search-con">
-                <input type="text" class="cs-filter-input" ng-model="query.filter" placeholder="Search...">
+                <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
                 <md-icon class="material-icons md-24" ng-click="applySearch($event)">search</md-icon>
             </div>
             <div class="cs-subform-control">
