--- a/Front/src/tpl/delete-confirm-dialog.html
+++ b/Front/src/tpl/delete-confirm-dialog.html
@@ -3,9 +3,8 @@
         <h2 class="md-title">{{ctrl.title | translate}}</h2>
         <p>{{ctrl.content | translate}}</p>
 
-        <p class="md-warn" ng-if="ctrl.error" layout="row" layout-align="start center">
-            <md-icon>error_outline</md-icon>
-            <span>&nbsp; {{ctrl.error}}</span>
+        <p class="text-danger" ng-if="ctrl.error" layout="row" layout-align="center center">
+            <span><md-icon class="text-danger">error_outline</md-icon>&nbsp; {{ctrl.error}}</span>
         </p>
 
         <div layout="row" layout-sm="column" layout-align="space-around">
