--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -38,43 +38,43 @@
         <ul class="nav">
             <li ui-sref-active="active">
                 <a ui-sref="app.dashboard" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-dashboard"></i>
                     <span>{{'dashBoard' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.campaign" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-desktop"></i>
                     <span>{{'campaign' | translate}}</span>
                 </a>
             </li>
             <li ng-class="{active: $state.is('app.report.flow') || $state.is('app.flow')}">
                 <a ui-sref="app.report.flow" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-tasks"></i>
                     <span>{{'flow' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.lander" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-bar-chart"></i>
                     <span>{{'lander' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.offer" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-paste"></i>
                     <span>{{'offer' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.traffic" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-sitemap"></i>
                     <span>{{'traffic' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.affiliate" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-globe"></i>
                     <span>{{'affiliate' | translate}}</span>
                 </a>
             </li>
