--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -13,7 +13,7 @@
             <div class="form-group traffic-source">
                 <label class="col-sm-3 control-label"></label>
                 <div class="col-sm-5">
-                    <md-button class="md-primary traffic-source-templates" ng-click="selectTrafficSourceTemplate($event)">
+                    <md-button class="md-primary btn-primary traffic-source-templates" ng-click="selectTrafficSourceTemplate($event)">
                         {{'Traffic source templates' | translate}}
                     </md-button>
                 </div>
