name is required

--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -80,6 +80,7 @@
         <label class="label-name">Name:</label>
         <input type="text" class="form-control" ng-class="{error:flow._nameError}" ng-model="flow.name" required name="name"
           ng-change="nameChanged(flow)"
+          ng-blur="nameRequired()"
           async-check-name="checkNameParams"
           async-validator-callback="validateCallback"
           post-validater-callback="postValidateCallback()"
@@ -87,6 +88,7 @@
         <span class-"error-message" ng-show="flow._nameError">Name is invalid</span>
         <span style="color:red" ng-show="editFlowForm.name.$invalid">
             <span ng-show="editFlowForm.name.$error.asyncCheckName">Name already exists.</span>
+            <span ng-show="editFlowForm.name.$error.nameRequired">Name is required.</span>
         </span>
       </div>
 
